apps/overlays/zion/n8n/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.milanchis.com`) && PathPrefix(`/`)
      kind: Rule
      priority: 10
      services:
        - name: zion-n8n
          port: 80
      middlewares:
        - name: zion-n8n-headers
  tls:
    secretName: n8n-certificate-secret
